# Ghost_ESP_B

./: .clangd  .gitignore  .gitlab-ci.yml  BRAND_GUIDELINES.md  CHANGELOG.md  CMakeLists.txt  README.md  build.py  firmware-manifest.json  windows_local_build.bat
.github/: FUNDING.yml
.github/workflows/: compile_all.yml  compile_prerelease.yml  publish-ghostbt.yml
components/M5GFX/: CMakeLists.txt
components/M5GFX/src/lgfx/utility/: lgfx_qrcode.h
components/axs15231b/: esp_bsp.c  esp_bsp.h  lv_port.c
components/esp-idf-pn532/: CMakeLists.txt
components/esp32-camera/: CHECKSUMS.json  CMakeLists.txt
components/espressif__elf_loader/: CMakeLists.txt  Kconfig  elf_loader.cmake  idf_component.yml
components/espressif__usb_host_hid/: CMakeLists.txt  idf_component.yml
components/io_manager/: CMakeLists.txt  i2c_bus_lock.c  i2c_bus_lock.h  i2c_shared.c  i2c_shared.h  io_manager.c  io_manager.h
components/lvgl_esp32_drivers/: CMakeLists.txt  lvgl_helpers.c  lvgl_helpers.h
components/tlv320dac3100/: CMakeLists.txt  tlv320dac3100.c  tlv320dac3100.h
configs/: sdkconfig.ACE_C5  sdkconfig.ACE_S3  sdkconfig.CYD2432S028R  sdkconfig.CYD2USB  sdkconfig.CYD2USB2.4Inch  sdkconfig.CYD2USB2.4Inch_C_Varient  sdkconfig.CYDDualUSB  sdkconfig.CYDMicroUSB  sdkconfig.JC3248W535EN  sdkconfig.JCMK_DevBoardPro  sdkconfig.NM-CYD-C5  sdkconfig.S3TWatch  sdkconfig.TDisplayS3-Touch  sdkconfig.TEmbedC1101  sdkconfig.awokmini  sdkconfig.c5_dualdisplay  sdkconfig.cardputer  sdkconfig.cardputeradv  sdkconfig.crowtech7inch  sdkconfig.default.esp32  sdkconfig.default.esp32c3  sdkconfig.default.esp32c5  sdkconfig.default.esp32c6  sdkconfig.default.esp32s2  sdkconfig.default.esp32s3  sdkconfig.devkit.esp32c3  sdkconfig.devkit.esp32c6  sdkconfig.esp32c5-ili9341  sdkconfig.feberispro  sdkconfig.flipper.jcmk_gps  sdkconfig.ghostboard  sdkconfig.heltecv3  sdkconfig.lolins3pro  sdkconfig.marauderv4  sdkconfig.marauderv6  sdkconfig.minion  sdkconfig.poltergeist  sdkconfig.somethingsomething  sdkconfig.somethingsomething2  sdkconfig.sunton7inch  (+5 more)
docs/hugo docs/: config.toml
docs/wiki/: About.md  Board‐Specific‐Guide.md  CYD-ID-Guide.md  Chameleon-Ultra-Guide.md  Commands.md  Custom-Build-Guide.md  Dual-Communication.md  Evil-Portal-Guide.md  FAQ.md  Features.md  Home.md  Known-Issues.md  Troubleshooting.md  Usage.md
include/core/: callbacks.h  chip_info.h  commandline.h  dns_server.h  esp_comm_manager.h  ghostesp_version.h  glog.h  memory_debug.h  (+8 more)
main/: CMakeLists.txt  Kconfig.projbuild  boot_banner_text.h  idf_component.yml  main.c
main/attacks/ble/: ble_spam.c
main/attacks/ethernet/: eth_arp_poison.c
main/attacks/wifi/: beacon_spam.c  channel_switch_attack.c  deauth_attack.c  dhcp_starvation.c  eapol_logoff.c  gtk_abuse.c  sae_flood.c
main/core/: callbacks.c  chip_info.c  commandline.c  dns_server.c  esp_comm_manager.c  glog.c  memory_debug.c  network_constants.c  ouis.c  scan_saver.c  screen_mirror.c  serial_manager.c  system_manager.c  uart_share.c  utils.c  wpa_crypto.c
main/gui/: accessibility_fonts.c  asset_pack.c  detail_view.c  gui_anim.c  ios_toggle.c  main_menu_layout.c  nav_history.c  options_view.c  paged_menu.c  popup.c  popup.h  scan_status.c  screen_layout.c  theme_palette.c  toast.c
main/managers/: aerial_detector_manager.c  ap_manager.c  audio_i2s_output.c  audio_i2s_output.h  audio_manager.c  audio_manager.h  audio_receiver.c  audio_receiver.h  audio_receiver_manager.c  audio_receiver_manager.h  audio_stream_manager.c  audio_stream_manager.h  auth_digest.c  badusb_manager.c  ble_manager.c  camera_stream_manager.c  chameleon_manager.c  config_manager.c  dial_manager.c  display_manager.c  encoder_manager.c  ethernet_manager.c  flock_detector_manager.c  fuel_gauge_manager.c  ghostchi_activity.c  ghostchi_manager.c  gps_manager.c  hid_script_parser.c  infrared_common.c  infrared_decoder.c  infrared_manager.c  infrared_protocol_encoders.c  infrared_protocols.c  joystick_manager.c  motion_detector_manager.c  nrf24_remote_manager.c  plugin_api.c  plugin_api_canvas.c  plugin_api_hw.c  plugin_api_internal.h  (+18 more)
main/managers/ethernet/: eth_comm_handler.c  eth_fingerprint.c  eth_scan_async.c
main/managers/microphone/: mic_driver.c  mic_goertzel.c  mic_visualizer.c
main/managers/nfc/: desfire.c  flipper_nfc_compat.c  mifare_classic.c  ndef.c  ntag_t2.c  write_ntag.c
main/managers/nfc/flipper_parsers/: aime.c  bip.c  disney_infinity.c  hi.c  microel.c  mizip.c  smartrider.c  two_cities.c
main/managers/rgb_effects/: rgb_effect_helpers.c
main/managers/status_display_animations/: anim_flying_toaster.c  anim_hud.c  anim_matrix.c  anim_starfield.c  status_display_animations.c
main/managers/views/: accelerometer_screen.c  airspace_monitor_screen.c  app_gallery_screen.c  audio_player_screen.c  audio_screen.c  badusb_view.c  clock_screen.c  compass_screen.c  enviii_screen.c  error_popup.c  ethernet_screen.c  flappy_ghost.c  ghostchi_screen.c  infrared_view.c  keyboard_screen.c  lockscreen.c  main_menu_screen.c  music_visualizer.c  nfc_view.c  nrf24_analyzer_view.c  number_pad_screen.c  options_screen.c  plugin_runner_view.c  sd_browser_screen.c  settings_screen.c  setup_wizard_screen.c  splash_screen.c  subghz_view.c  terminal_screen.c  wardriving_screen.c
main/scans/: device_detect_scan_stub.c
main/scans/ble/: airtag_scan.c  device_detect_scan.c  flipper_scan.c  gatt_scan.c
main/scans/wifi/: airspace_monitor.c  ap_scan.c  arp_scan.c  port_scan.c  ssh_scan.c  station_scan.c  wifi_channels.c
plugins/: README.md  package.schema.json
plugins/tools/ghostbt/: README.md  pyproject.toml
plugins/tools/ghostbt/ghostbt/: asset.py  cli.py  config.py  create.py  dist.py  esp_idf.py  flash.py  icon.py  package.py
plugins/tools/ghostbt/ghostbt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
plugins/tools/ghostbt/ghostbt/data/sdk/: ghostesp_plugin_api.h
plugins/tools/ghostbt/ghostbt/data/templates/basic_app/: CMakeLists.txt  sdkconfig.defaults
plugins/tools/ghostbt/ghostbt/data/templates/basic_app/main/: CMakeLists.txt  {{APP_SYMBOL}}.c
press kit/: README.md
(+947 files in other folders)
