[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostbt"
version = "0.1.0"
description = "Ghost Build Tool - build and package GhostESP native SD apps"
requires-python = ">=3.8"
license = {text = "GPL-3.0"}

[project.scripts]
gbt = "ghostbt.cli:main"
ghostbt = "ghostbt.cli:main"
