[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostbt"
version = "0.1.0"
description = "Ghost Build Tool - build and package GhostESP native SD apps"
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0"
dependencies = [
    "pyserial>=3.5",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Embedded Systems",
]

[project.scripts]
gbt = "ghostbt.cli:main"
ghostbt = "ghostbt.cli:main"

[project.urls]
Homepage = "https://github.com/GhostESP-Revival/GhostESP"
Repository = "https://github.com/GhostESP-Revival/GhostESP/tree/apps/plugins/tools/ghostbt"
Issues = "https://github.com/GhostESP-Revival/GhostESP/issues"

[tool.setuptools.package-data]
ghostbt = [
    "data/sdk/*",
    "data/templates/**/*",
]
